--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.9</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
